# homepickle

./: .gitignore  CLAUDE.md  pyproject.toml
src/homepickle/: __init__.py  __main__.py  analyzer.py  browser.py  daemon.py  evaluator.py  models.py  scraper.py  storage.py  web.py
src/homepickle/templates/: base.html  index.html  profile.html  property.html
tests/: __init__.py  test_analyzer.py  test_daemon.py  test_models.py  test_scraper.py  test_storage.py  test_web.py
